--- a/src/sections/nace-kodlari/view/styles.css
+++ b/src/sections/nace-kodlari/view/styles.css
@@ -3,5 +3,5 @@ tr.MuiTableRow-root {
 }
 
 tr.MuiTableRow-root:hover {
-    background-color: #f5f5f5 !important;
+    background-color: #F4F6F8 !important;
 }
